# lifeup_back

./: .env  .env.development  .env.production  .gitignore  CLAUDE.md  Cargo.toml  README.md  career.json  env.template  generate_achievement.http  last_prompt.md  lifeup.db  lifeup.db-shm  lifeup.db-wal  perplexity_resources.json  task_schema.md  test_ai_config.md  test_api.md  test_generate_json.md  test_generate_json.sh
.claude/: settings.local.json
calendar/: 114.csv
scripts/: reset_db.sh
src/: achievement_service.rs  ai_service.rs  ai_tasks.rs  ai_tasks_achievement.rs  auth.rs  behavior_analytics.rs  calendar_service.rs  career_routes.rs  config.rs  database_reset.rs  main.rs  models.rs  notification_generator.rs  progressive_career_gen.rs  push_scheduler.rs  push_service.rs  rate_limit.rs  routes.rs  seed_data.rs  validation.rs
src/ai_service/: common.rs  mod.rs  openai.rs  openrouter.rs  trait.rs
