[package]
name = "lifeup_back"
version = "0.1.0"
edition = "2021"
default-run = "lifeup_back"

# 隱藏所有編譯器警告
[lints.rust]
warnings = "allow"

[dependencies]
# Web 框架
actix-web = { version = "4.4", features = ["rustls-0_21"] }
actix-rt = "2.9"

# ORM 框架
rbs = { version = "4.6" }
rbatis = { version = "4.6" }

# 数据库驱动 (选择您需要的数据库)
rbdc-sqlite = { version = "4.6" }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 日志
log = "0.4"
log4rs = { version = "1.4", features = ["console_appender", "file_appender", "rolling_file_appender"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 环境变量
dotenv = "0.15"

# CORS 支持
actix-cors = "0.6"

# 配置管理
config = "0.13"

# 隨機數生成
rand = "0.8"

# 密碼哈希
bcrypt = "0.15"

# JWT 認證
jsonwebtoken = "9.2"

# 會話管理
actix-session = { version = "0.8", features = ["redis-rs-session"] }
actix-identity = "0.6"

# Redis (for sessions)
redis = "0.24"

# HTTP 客戶端
reqwest = { version = "0.11", features = ["json"] }

# JSON Schema 驗證
jsonschema = "0.17"

# Async trait 支援
async-trait = "0.1"

# Async stream 支援 (for SSE)
async-stream = "0.3"
futures = "0.3"

# SSL/TLS 支援
rustls = "0.21"
rustls-pemfile = "1.0"

# Web Push 推送通知
web-push = "0.9"
base64 = "0.21"
url = "2.5"

# OpenSSL (Windows 相容性)
openssl = { version = "0.10", features = ["vendored"] }

# 定時任務調度
tokio-cron-scheduler = "0.9"